casi completo autenticacion completada